# futures-mutex-exercise

./: Cargo.toml
examples/: unsync_philosopher.rs  unsync_philosopher_ok.rs
src/: lib.rs  unsync.rs
